# pinhoComputerGraphics

./: README.md
CGT1/ImageClass/: CMakeLists.txt
CGT1/ImageClass/data/: flair0100.tif
CGT1/ImageClass/examples/: example_animation.cpp  example_convert_img_txt.cpp  example_histogram.cpp  example_image_manipulation.cpp  example_load_img_txt.cpp  example_test.cpp  example_texture.cpp  matematica.cpp
CGT2/: README.md  Relatório_exercício_1.odt  Relatório_exercício_2.odt  Relatório_exercício_3.odt  Relatório_exercício_4.odt
CGT2/ImageClass/SOIL/src/: SOIL.c
CGT2/ImageClass/examples/: convolutional_filter.cpp  mean_filter_lap.cpp  median_filter.cpp  median_filter_lap.cpp
CGT2/ImageClass/src/: ImageClass.cpp  Texture.cpp
CGT3/: .gitignore  README.md
CGT3/ImageClass/SOIL/: CMakeLists.txt
CGT3/ImageClass/examples/: histogram.cpp  threshold_segmentation.cpp
CGT4/: .gitignore
CGT4/ImageClass/: CMakeLists.txt
CGT4/ImageClass/examples/: CMakeLists.txt  classify.cpp  generate_clgm.cpp  generate_clgm_region.cpp  generate_glrlm.cpp
CGT4/ImageClass/include/: ImageClass.h
CGT4/ImageClass/src/: CMakeLists.txt
CGT4/python/: batch_resize.py  classify.py  generate_descriptors_cglm.py  generate_descriptors_glrlm.py  glcm_test_set.csv  glcm_training_set.csv
CGT5/: README.md  map_plot.py  requirements.txt  subplots.py
CGT5/geometries/: main.cpp  map.h  polygon.h  setup.py  twod_lines.h  twod_vectors.h
